appId: twinkler
tags:
  - main
---
- launchApp
- tapOn:
    id: "settings-button"
- tapOn:
    id: "scripture-language-picker"
- tapOn:
    id: "scripture-language-en"
- tapOn:
    id: "scripture-translation-16"
- tapOn:
    id: "scripture-voice-151"
- stopApp
- launchApp
- tapOn:
    id: "settings-button"
- assertVisible: ".*English.*"
- assertVisible: ".*BSB.*"
- assertVisible: ".*Bob Souer.*"
